Copy images to avoid path problems + title left aligned

--- a/_extensions/ddebenedittis/tu_delft/tu_delft_unipi.scss
+++ b/_extensions/ddebenedittis/tu_delft/tu_delft_unipi.scss
@@ -55,6 +55,11 @@ $presentation-font-size-root: 35px !default;
         }
     }
 }
+#title-slide.quarto-title-block.center > * {
+  width: 50%;
+  text-align: left;
+  margin-left: 0;
+}
 //  No slide number on title slide
 .reveal .slide-number > a[href*='title-slide'] {
   display: none;
